--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <div id="container">
-  <button class="button">Добавить</button>
-  <input class="storage" type="text">
+  <button id="button">Добавить</button>
+  <input id="storage" type="text">
   <ul class="text" id="taskList"></ul>
 </div>
 </body>
