--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>taskList</title>
-    <script src="index.js" async></script>
 </head>
 <body>
 <div id="container">
   <button id="button">Добавить</button>
-  <input id="storage" type="text">
+  <label for="storage"></label><input id="storage" type="text">
   <ul class="text" id="taskList"></ul>
 </div>
 </body>
